--- a/app/src/main/res/layout/theory_layout.xml
+++ b/app/src/main/res/layout/theory_layout.xml
@@ -5,11 +5,13 @@
     android:orientation="vertical"
     android:background="#ffffff">
     <ImageButton
+        android:id="@+id/imageButton"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:background="@drawable/home3"
         android:layout_margin="15dp"
-        />
+        android:background="@drawable/home3" />
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
