--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.rinnv.esd_g03.TabActivity$PlaceholderFragment">
+    tools:context="com.example.rinnv.esd_g03.Activity.TabActivity$PlaceholderFragment">
 
     <TextView
         android:id="@+id/section_label"
