--- a/app/src/main/res/layout/practice_layout.xml
+++ b/app/src/main/res/layout/practice_layout.xml
@@ -18,7 +18,6 @@
         android:layout_marginTop="15dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/menu2"
-        android:layout_alignTop="@+id/imageButton"
         android:layout_alignParentEnd="true" />
     <TextView
         android:id="@+id/textView2"
@@ -46,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="23dp"
         android:textColor="#339966"
         android:textSize="18dp"
         android:layout_below="@+id/wordText"
@@ -56,10 +55,10 @@
         android:id="@+id/btnspeaker"
         android:layout_width="40dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="47dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/speaker3"
         android:layout_alignParentBottom="true"
-        android:layout_toEndOf="@+id/word2" />
+        android:layout_toEndOf="@+id/wordPhonetic" />
     <ImageButton
         android:id="@+id/btnrecord"
         android:layout_width="65dp"
@@ -87,8 +86,8 @@
 
     <ImageView
         android:id="@+id/result"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:srcCompat="@drawable/true2"
         android:layout_below="@+id/wordPhonetic"
         android:layout_centerHorizontal="true"
