--- a/app/src/main/res/layout/theory_layout.xml
+++ b/app/src/main/res/layout/theory_layout.xml
@@ -30,9 +30,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/border"
-                android:padding="20dp"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:weightSum="2">
 
                 <LinearLayout
@@ -58,7 +61,9 @@
                         android:layout_height="wrap_content"
                         android:fadingEdge="none"
                         android:focusable="false"
-                        android:scrollbars="none" />
+                        android:scrollbars="none"
+                        android:paddingBottom="5dp"
+                        />
 
                     <ImageButton
                         android:id="@+id/btnvideo_Pho1"
