--- a/app/src/main/res/layout/practice_layout.xml
+++ b/app/src/main/res/layout/practice_layout.xml
@@ -66,6 +66,13 @@
         android:background="@drawable/record2"
         android:layout_alignBottom="@+id/btnspeaker"
         android:layout_centerHorizontal="true" />
+    <ImageButton
+        android:id="@+id/btnreplay"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:background="@drawable/repeat"
+        android:layout_alignBottom="@+id/btnspeaker"
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:id="@+id/btnprevious"
@@ -92,5 +99,6 @@
         android:layout_below="@+id/wordPhonetic"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp" />
+
 
 </RelativeLayout>
