--- a/app/src/main/res/layout/example_item.xml
+++ b/app/src/main/res/layout/example_item.xml
@@ -2,23 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:weightSum="5">
 
     <TextView
         android:id="@+id/tv_pho1Ex1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:text="see"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="#000000"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold" />
-
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="4"
         android:background="#ffffff"
         android:paddingRight="20dp"
         android:src="@drawable/speaker" />
