--- a/app/src/main/res/layout/pronouce_example_item.xml
+++ b/app/src/main/res/layout/pronouce_example_item.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:weightSum="2">
     <TextView
         android:id="@+id/tv_phoWord1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:text="see"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="#000000"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textSize="17sp"
+        android:paddingRight="10dp"/>
+    <TextView
+        android:id="@+id/tv_phoWord2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="see"
+        android:textAlignment="textStart"
+        android:textColor="#000000"
+        android:textSize="17sp"
+        android:paddingLeft="10dp"/>
 </LinearLayout>
