--- a/app/src/main/res/layout/theory_layout.xml
+++ b/app/src/main/res/layout/theory_layout.xml
@@ -36,13 +36,13 @@
                 android:paddingBottom="20dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:weightSum="2">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
+                    android:layout_weight="2"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tv_pho1Title"
@@ -53,33 +53,8 @@
                         android:textAlignment="center"
                         android:textColor="#009966"
                         android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <com.example.rinnv.esd_g03.Ultility.ExpandableHeightListView
-                        android:id="@+id/list_pho1Guide"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fadingEdge="none"
-                        android:focusable="false"
-                        android:scrollbars="none"
-                        android:paddingBottom="5dp"
-                        />
-
-                    <ImageButton
-                        android:id="@+id/btnvideo_Pho1"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:layout_marginTop="15dp"
-                        android:background="#aaffffff"
-                        android:src="@drawable/utube" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
+                        android:textStyle="bold"
+                        android:layout_weight="1"/>
                     <TextView
                         android:id="@+id/tv_pho2Title"
                         android:layout_width="match_parent"
@@ -89,15 +64,36 @@
                         android:textAlignment="center"
                         android:textColor="#009966"
                         android:textSize="20sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:layout_weight="1"/>
 
-                    <com.example.rinnv.esd_g03.Ultility.ExpandableHeightListView
-                        android:id="@+id/list_pho2Guide"
+
+                </LinearLayout>
+                <com.example.rinnv.esd_g03.Ultility.ExpandableHeightListView
+                    android:id="@+id/list_pho1Guide"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fadingEdge="none"
+                    android:focusable="false"
+                    android:scrollbars="none"
+                    android:paddingBottom="5dp"
+                    />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="2"
+                    android:orientation="horizontal">
+
+
+                    <ImageButton
+                        android:id="@+id/btnvideo_Pho1"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fadingEdge="none"
-                        android:focusable="false"
-                        android:scrollbars="none" />
+                        android:layout_height="30dp"
+                        android:layout_marginTop="15dp"
+                        android:background="#aaffffff"
+                        android:src="@drawable/utube"
+                        android:layout_weight="1"/>
+
 
                     <ImageButton
                         android:id="@+id/btnvideo_Pho2"
@@ -105,7 +101,8 @@
                         android:layout_height="30dp"
                         android:layout_marginTop="15dp"
                         android:background="#aaffffff"
-                        android:src="@drawable/utube" />
+                        android:src="@drawable/utube"
+                        android:layout_weight="1"/>
                 </LinearLayout>
 
             </LinearLayout>
