--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="PRONOUNCIATION"
-        android:textSize="30dp"
-        android:id="@+id/textView3"
+    android:layout_width="match_parent"
+    android:background="@drawable/bg"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:layout_width="280px"
+        android:layout_height="250px"
+        android:background="@drawable/logo"
+        android:id="@+id/imageView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp" />
-
+        android:layout_marginTop="18dp" />
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ɪ vs i:"
-        android:layout_below="@+id/textView3"
-        android:layout_alignStart="@+id/button2"
-        android:layout_marginTop="139dp" />
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="/ɪ/ and /i:/"
+        android:background="@drawable/state"
+        android:textSize="18dp"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:layout_marginTop="53dp"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentStart="true" />
 
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ʊ vs u:"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/state"
+        android:text="abc"
+        android:layout_marginTop="12dp"
+        android:textSize="18dp"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
         android:layout_below="@+id/button1"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
