--- a/app/src/main/res/layout/pronouce_example_item.xml
+++ b/app/src/main/res/layout/pronouce_example_item.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:weightSum="2">
+    android:weightSum="2"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
     <TextView
         android:id="@+id/tv_phoWord1"
         android:layout_width="match_parent"
