--- a/app/src/main/res/layout/example_item.xml
+++ b/app/src/main/res/layout/example_item.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:weightSum="4">
+    android:weightSum="4"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
 
     <TextView
         android:id="@+id/tv_pho1Ex1"
@@ -13,12 +15,12 @@
         android:text="see"
         android:textAlignment="textStart"
         android:textColor="#000000"
-        android:textSize="15sp"
+        android:textSize="17sp"
         android:textStyle="bold" />
     <ImageButton
         android:id="@+id/speak"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_weight="3"
         android:background="#ffffff"
         android:paddingRight="20dp"
