--- a/app/src/main/res/drawable/button_pressed.xml
+++ b/app/src/main/res/drawable/button_pressed.xml
@@ -11,7 +11,17 @@ android:angle="90"
   <gradient android:startColor="#FF66CFE6" android:centerColor="#FF207FB9"
 android:endColor="#FF0060B8" android:angle="270"/>
 -->
+    <stroke
+        android:width="5dp"
+        android:color="#09472b" />
 
+    <padding
+        android:bottom="3dp"
+        android:left="3dp"
+        android:right="3dp"
+        android:top="3dp" />
+
+    <corners android:radius="7dp" />
 
 
 
