--- a/app/src/main/res/layout/practice_layout2.xml
+++ b/app/src/main/res/layout/practice_layout2.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    >
     <ImageButton
         android:layout_width="45dp"
         android:layout_height="45dp"
@@ -23,7 +24,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pronounce words belowxxxxxxxxx"
+        android:text="Pronounce words below"
         android:layout_below="@+id/home"
         android:layout_alignStart="@+id/home" />
 
@@ -33,11 +34,130 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="33dp"
         android:text="TextView"
-        android:textSize="35dp"
+        android:textSize="60dp"
         android:textColor="#009966"
         android:textStyle="bold"
         android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"/>
+    <LinearLayout
+        android:id="@+id/layout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignTop="@+id/wordText"
+        android:layout_alignParentStart="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="2"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/fword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Chip"
+                android:textSize="35dp"
+                android:textColor="#009966"
+                android:textStyle="bold"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:id="@+id/sword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Cheap"
+                android:textAlignment="center"
+                android:textColor="#009966"
+                android:textSize="35dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="2"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/fpho"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Chip"
+                android:textColor="#339966"
+                android:textSize="18dp"
+                android:textAlignment="center"
+                android:layout_marginTop="23dp"
+                />
+            <TextView
+                android:id="@+id/spho"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Cheap"
+                android:textColor="#339966"
+                android:layout_marginTop="23dp"
+                android:textSize="18dp"
+                android:textAlignment="center"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="2"
+            android:orientation="horizontal">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+                <ImageButton
+                    android:layout_weight="1"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/speaker3"
+                    android:id="@+id/speaker1"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="42dp"
+                    android:layout_marginStart="20dp"/>
+                <ImageButton
+                    android:layout_weight="1"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/record2"
+                    android:id="@+id/record1"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="35dp" />
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+                <ImageButton
+                    android:id="@+id/speaker2"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/speaker3"
+                    android:layout_marginEnd="20dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="42dp" />
+                <ImageButton
+                    android:layout_weight="1"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/record2"
+                    android:id="@+id/record2"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="35dp" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/wordPhonetic"
@@ -48,7 +168,8 @@
         android:textColor="#339966"
         android:textSize="18dp"
         android:layout_below="@+id/wordText"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"/>
 
     <ImageButton
         android:id="@+id/btnspeaker"
@@ -58,19 +179,14 @@
         android:background="@drawable/speaker3"
         android:layout_alignParentBottom="true"
         android:layout_toEndOf="@+id/btnrecord"
-        android:layout_marginStart="10dp" />
+        android:layout_marginStart="10dp"
+        android:visibility="invisible"/>
     <ImageButton
+        android:visibility="invisible"
         android:id="@+id/btnrecord"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:background="@drawable/record2"
-        android:layout_alignBottom="@+id/btnspeaker"
-        android:layout_centerHorizontal="true" />
-    <ImageButton
-        android:id="@+id/btnreplay"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:background="@drawable/repeat"
         android:layout_alignBottom="@+id/btnspeaker"
         android:layout_centerHorizontal="true" />
 
@@ -96,9 +212,11 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/true2"
-        android:layout_below="@+id/wordPhonetic"
+        android:layout_alignBottom="@+id/btnspeaker"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp" />
+        />
+
+
 
 
 </RelativeLayout>
