--- a/app/src/main/res/layout/practice_layout2.xml
+++ b/app/src/main/res/layout/practice_layout2.xml
@@ -191,6 +191,15 @@
         android:layout_centerHorizontal="true" />
 
     <ImageButton
+        android:id="@+id/btnreplay"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:background="@drawable/repeat"
+        android:layout_alignBottom="@+id/btnspeaker"
+        android:layout_centerHorizontal="true" />
+
+
+    <ImageButton
         android:id="@+id/btnprevious"
         android:layout_width="50dp"
         android:layout_height="50dp"
