--- a/app/src/main/res/layout/activity_you_tube.xml
+++ b/app/src/main/res/layout/activity_you_tube.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rinnv.esd_g03.Activity.YouTubeActivity">
+    android:orientation="vertical"
+    tools:context=".Activity.YouTubeActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/section_label"/>
 
     <com.google.android.youtube.player.YouTubePlayerView
         android:id="@+id/youtube_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="wrap_content" />
+
+
+</LinearLayout>
